[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/items/potions.png" type="Texture" id=1]
[ext_resource path="res://assets/items/coin.png" type="Texture" id=2]
[ext_resource path="res://assets/menu/potion_background1.png" type="Texture" id=3]
[ext_resource path="res://scenes/GUI.gd" type="Script" id=4]
[ext_resource path="res://assets/fonts/Noto_Sans_JP/NotoSansJP-Black.otf" type="DynamicFontData" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 8, 2, 16, 30 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 40, 2, 16, 30 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 72, 2, 16, 30 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 104, 2, 16, 30 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 136, 2, 16, 30 )

[sub_resource type="DynamicFont" id=6]
size = 12
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 630.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Potions" type="HBoxContainer" parent="HBoxContainer"]
margin_right = 589.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurePotion" type="HBoxContainer" parent="HBoxContainer/Potions"]
margin_right = 35.0
margin_bottom = 40.0
rect_min_size = Vector2( 35, 40 )

[node name="Background" type="NinePatchRect" parent="HBoxContainer/Potions/CurePotion"]
margin_right = 35.0
margin_bottom = 40.0
rect_min_size = Vector2( 30, 40 )
size_flags_horizontal = 3
texture = ExtResource( 3 )

[node name="Texture" type="TextureRect" parent="HBoxContainer/Potions/CurePotion/Background"]
margin_left = 4.0
margin_top = 5.0
margin_right = 20.0
margin_bottom = 30.0
texture = SubResource( 1 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Count" type="Label" parent="HBoxContainer/Potions/CurePotion/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -4.0
text = "0"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PoisonPotion" type="HBoxContainer" parent="HBoxContainer/Potions"]
margin_left = 39.0
margin_right = 74.0
margin_bottom = 40.0
rect_min_size = Vector2( 35, 40 )

[node name="Background" type="NinePatchRect" parent="HBoxContainer/Potions/PoisonPotion"]
margin_right = 35.0
margin_bottom = 40.0
rect_min_size = Vector2( 30, 30 )
size_flags_horizontal = 3
texture = ExtResource( 3 )

[node name="Texture" type="TextureRect" parent="HBoxContainer/Potions/PoisonPotion/Background"]
margin_left = 4.0
margin_top = 5.0
margin_right = 20.0
margin_bottom = 30.0
texture = SubResource( 2 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Count" type="Label" parent="HBoxContainer/Potions/PoisonPotion/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -4.0
text = "0"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeedDownPotion" type="HBoxContainer" parent="HBoxContainer/Potions"]
margin_left = 78.0
margin_right = 113.0
margin_bottom = 40.0
rect_min_size = Vector2( 35, 40 )

[node name="Background" type="NinePatchRect" parent="HBoxContainer/Potions/SpeedDownPotion"]
margin_right = 35.0
margin_bottom = 40.0
rect_min_size = Vector2( 30, 30 )
size_flags_horizontal = 3
texture = ExtResource( 3 )

[node name="Texture" type="TextureRect" parent="HBoxContainer/Potions/SpeedDownPotion/Background"]
margin_left = 4.0
margin_top = 5.0
margin_right = 20.0
margin_bottom = 30.0
texture = SubResource( 3 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Count" type="Label" parent="HBoxContainer/Potions/SpeedDownPotion/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -4.0
text = "0"
align = 2
valign = 1

[node name="SpeedUpPotion" type="HBoxContainer" parent="HBoxContainer/Potions"]
margin_left = 117.0
margin_right = 152.0
margin_bottom = 40.0
rect_min_size = Vector2( 35, 40 )

[node name="Background" type="NinePatchRect" parent="HBoxContainer/Potions/SpeedUpPotion"]
margin_right = 35.0
margin_bottom = 40.0
rect_min_size = Vector2( 30, 30 )
size_flags_horizontal = 3
texture = ExtResource( 3 )

[node name="Texture" type="TextureRect" parent="HBoxContainer/Potions/SpeedUpPotion/Background"]
margin_left = 4.0
margin_top = 5.0
margin_right = 20.0
margin_bottom = 30.0
texture = SubResource( 4 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Count" type="Label" parent="HBoxContainer/Potions/SpeedUpPotion/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -4.0
text = "0"
align = 2
valign = 1

[node name="JumpBoostPotion" type="HBoxContainer" parent="HBoxContainer/Potions"]
margin_left = 156.0
margin_right = 191.0
margin_bottom = 40.0
rect_min_size = Vector2( 35, 40 )

[node name="Background" type="NinePatchRect" parent="HBoxContainer/Potions/JumpBoostPotion"]
margin_right = 35.0
margin_bottom = 40.0
rect_min_size = Vector2( 30, 30 )
size_flags_horizontal = 3
texture = ExtResource( 3 )

[node name="Texture" type="TextureRect" parent="HBoxContainer/Potions/JumpBoostPotion/Background"]
margin_left = 4.0
margin_top = 5.0
margin_right = 20.0
margin_bottom = 30.0
texture = SubResource( 5 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Count" type="Label" parent="HBoxContainer/Potions/JumpBoostPotion/Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -4.0
text = "0"
align = 2
valign = 1

[node name="Coins" type="HBoxContainer" parent="HBoxContainer"]
margin_left = 593.0
margin_right = 620.0
margin_bottom = 40.0
alignment = 2

[node name="Texture" type="TextureRect" parent="HBoxContainer/Coins"]
margin_right = 16.0
margin_bottom = 40.0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="Count" type="Label" parent="HBoxContainer/Coins"]
margin_left = 20.0
margin_top = 11.0
margin_right = 27.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 6 )
text = "0"
